language/move-lang/tests/move_check/naming/duplicate_type_parameter_function.move
module M {
    foo<T, T>() {}
    foo2<T: copyable, T: resource, T>() {}
}
